[gd_scene load_steps=20 format=3 uid="uid://c5jwmdf7s7xg2"]

[ext_resource type="Script" path="res://script/evidence/note/note_paper.gd" id="1_fvhw8"]
[ext_resource type="Texture2D" uid="uid://btpn2feqe0j3f" path="res://asset/image/note.png" id="2_e3cin"]
[ext_resource type="FontFile" uid="uid://bvpi8agp3sir0" path="res://asset/font/CourierPrime-Regular.ttf" id="3_k685s"]
[ext_resource type="Texture2D" uid="uid://biqpl53erb20s" path="res://asset/image/crossout.png" id="4_haep4"]
[ext_resource type="AudioStream" uid="uid://dkoqdlvpmnpj8" path="res://asset/audio/sfx/MBSFX Paper 1.wav" id="5_dg0u2"]
[ext_resource type="AudioStream" uid="uid://dudmto0jnaw38" path="res://asset/audio/sfx/MBSFX  Writing 1.wav" id="8_e7l7p"]
[ext_resource type="AudioStream" uid="uid://dw24cvyjihtvy" path="res://asset/audio/sfx/MBSFX  Writing 2.wav" id="9_kihmt"]
[ext_resource type="AudioStream" uid="uid://oqeyudktoipo" path="res://asset/audio/sfx/MBSFX  Writing 3.wav" id="10_psra0"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_80xyh"]
friction = 0.5
bounce = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_vgplj"]
size = Vector3(0.851394, 0.01, 0.7888)

[sub_resource type="Shader" id="Shader_t46uq"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.3.stable's StandardMaterial3D.

shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_front, diffuse_burley, specular_schlick_ggx;

uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : source_color, filter_linear_mipmap, repeat_enable;
uniform float point_size : hint_range(0.1, 128.0, 0.1);

uniform float roughness : hint_range(0.0, 1.0);
uniform sampler2D texture_metallic : hint_default_white, filter_linear_mipmap, repeat_enable;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_roughness_r, filter_linear_mipmap, repeat_enable;

uniform float specular : hint_range(0.0, 1.0, 0.01);
uniform float metallic : hint_range(0.0, 1.0, 0.01);

uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;

uniform int line;

void vertex() {
	UV = UV * uv1_scale.xy + uv1_offset.xy;
}

void fragment() {
	vec2 base_uv = UV;

	vec4 albedo_tex = texture(texture_albedo, base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	float cutoff = 1.0 - (float(line - 1) * 0.09 + 0.22);
	// 0.78 at line 1
	// 0.69 at line 2
	// m = 0.09
	
	if (distance(ALBEDO, vec3(0,0,0)) < 0.05 || UV.y < cutoff) {
		ALPHA = 0.0;
	}

	float metallic_tex = dot(texture(texture_metallic, base_uv), metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	SPECULAR = specular;

	vec4 roughness_texture_channel = vec4(1.0, 0.0, 0.0, 0.0);
	float roughness_tex = dot(texture(texture_roughness, base_uv), roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n1dgu"]
resource_local_to_scene = true
render_priority = 0
shader = SubResource("Shader_t46uq")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/line = 100
shader_parameter/texture_albedo = ExtResource("2_e3cin")

[sub_resource type="QuadMesh" id="QuadMesh_l3ind"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_n1dgu")

[sub_resource type="QuadMesh" id="QuadMesh_212kk"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_n1dgu")

[sub_resource type="BoxShape3D" id="BoxShape3D_kheio"]
size = Vector3(0.816956, 0.0334778, 0.816772)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wr0ds"]
transparency = 1
albedo_texture = ExtResource("4_haep4")

[sub_resource type="PlaneMesh" id="PlaneMesh_lggv1"]
material = SubResource("StandardMaterial3D_wr0ds")
size = Vector2(0.05, 0.05)
center_offset = Vector3(0.025, 0, 0)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ltdip"]
random_pitch = 2.0
random_volume_offset_db = 2.0
streams_count = 1
stream_0/stream = ExtResource("5_dg0u2")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dlv5u"]
random_pitch = 2.0
streams_count = 3
stream_0/stream = ExtResource("8_e7l7p")
stream_1/stream = ExtResource("9_kihmt")
stream_2/stream = ExtResource("10_psra0")

[node name="Note" type="RigidBody3D" groups=["holdable", "inspectable"]]
mass = 0.4
physics_material_override = SubResource("PhysicsMaterial_80xyh")
continuous_cd = true
max_contacts_reported = 1
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource("1_fvhw8")

[node name="Actions" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Actions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0806968, 0.06, 0.0643999)
shape = SubResource("BoxShape3D_vgplj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_l3ind")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.01, 0)
mesh = SubResource("QuadMesh_212kk")

[node name="Label3D" type="Label3D" parent="MeshInstance3D2"]
transform = Transform3D(0.27, 0, 0, 0, -0.27, -2.36041e-08, 0, 2.36041e-08, -0.27, -0.339036, -0.318972, -0.02)
double_sided = false
render_priority = 1
modulate = Color(0, 0, 0, 0.964706)
text = "Dear Tony,
I deeply regret my actions
I will improve my reactions
My life is like a rose
I need to improve my prose
I hid the body under the stump
And I accidently left on the oil pump
Love,
Don Scarpelli"
font = ExtResource("3_k685s")
font_size = 24
outline_size = 0
horizontal_alignment = 0
vertical_alignment = 0
line_spacing = 33.025
width = 539.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000152588, 0.00752258, 0.0055542)
shape = SubResource("BoxShape3D_kheio")

[node name="Crossout" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.340368, 0.0317333, -0.304388)
visible = false

[node name="Image" type="MeshInstance3D" parent="Crossout"]
transform = Transform3D(2.11, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("PlaneMesh_lggv1")
skeleton = NodePath("../..")

[node name="PreviouslyCrossedOut" type="Node3D" parent="."]

[node name="CutSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ltdip")
volume_db = 7.0

[node name="CrossoutSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_dlv5u")

[connection signal="mouse_exited" from="Actions" to="." method="_on_actions_mouse_exited"]
